--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ NEXT_PUBLIC_FIREBASE_PROJECT_ID=project-id
 NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=storage-bucket
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=sender-id
 NEXT_PUBLIC_FIREBASE_APP_ID=app-id
+NEXT_PUBLIC_MEASUREMENT_ID=measurement-id
