--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.19",
+    "@mui/x-data-grid": "^7.6.2",
     "firebase": "^10.12.2",
     "next": "14.2.3",
     "react": "^18",
