--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.10.8",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.19",
@@ -16,6 +17,7 @@
     "@mui/x-charts": "^7.6.2",
     "@mui/x-data-grid": "^7.6.2",
     "firebase": "^10.12.2",
+    "graphql": "^16.9.0",
     "next": "14.2.3",
     "notistack": "^3.0.1",
     "react": "^18",
