--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-NEXT_PUBLIC_FIREBASE_API_KEY=api-key
-NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=auth-domain
-NEXT_PUBLIC_FIREBASE_PROJECT_ID=project-id
-NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=storage-bucket
-NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=sender-id
-NEXT_PUBLIC_FIREBASE_APP_ID=app-id
-NEXT_PUBLIC_MEASUREMENT_ID=measurement-id
+NEXT_PUBLIC_FIREBASE_API_KEY=AIzaSyA9PWgrehhAnbE6qAETAi7D1wnLDRk8Wz4
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=next-firebase-job-portal.firebaseapp.com
+NEXT_PUBLIC_FIREBASE_PROJECT_ID=next-firebase-job-portal
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=next-firebase-job-portal.appspot.com
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=463151609403
+NEXT_PUBLIC_FIREBASE_APP_ID=1:463151609403:web:4a229f9cc28ff067df0e1e
+NEXT_PUBLIC_MEASUREMENT_ID=G-LJLBWXSKWN
